# template-python-hello-world

./: .envrc  .gitignore  .gitlint  .kodiak.toml  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  salutation.py  setup.cfg  shell.nix  test_salutation.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  mutation-testing.yml  pr_labelling.yml  push.yml
module_name/: salutation.py
nix/: sources.json
src/: salutation.py
tests/: test_command_line.py  test_salutation.py
